contrast and button fix

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -153,11 +153,10 @@ a:active {
 
 .topmenu_container > * {
   color: #fff;
-  text-shadow: 3px 2px 3px rgb(156, 156, 156);
   font-family: Inter;
   font-size: 12px;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 700;
   line-height: normal;
   text-decoration: none;
 }
@@ -905,6 +904,9 @@ p {
 }
 
 .button_cart {
+  font-size: 18px;
+  font-weight: 700;
+  color: white;
   height: 40px;
   width: 125px;
   border: 1px solid #000;
@@ -1307,7 +1309,7 @@ textarea::placeholder {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #8aa199;
+  background-color: #2c2346;
   margin: 0.4px;
   border: solid;
   border-width: 0.2px;
